# ChangeLog for sys-power/upower-pm-utils
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/upower-pm-utils/ChangeLog,v 1.4 2014/06/02 21:39:07 ssuominen Exp $

*upower-pm-utils-0.9.23-r1 (02 Jun 2014)

  02 Jun 2014; Samuli Suominen <ssuominen@gentoo.org>
  +upower-pm-utils-0.9.23-r1.ebuild:
  Pass -DUPOWER_ENABLE_DEPRECATED from "Cflags: " of upower-glib.pc wrt
  http://bugzilla.xfce.org/show_bug.cgi?id=10931 and
  http://bugs.freedesktop.org/show_bug.cgi?id=79565

  02 Jun 2014; Samuli Suominen <ssuominen@gentoo.org>
  upower-pm-utils-0.9.23.ebuild:
  Pull in virtual/libgudev and use := subslotting for it to gain automatic
  rebuild from SONAME change.

  31 May 2014; Samuli Suominen <ssuominen@gentoo.org>
  upower-pm-utils-0.9.23.ebuild:
  Stabilize for everyone because this is identical to stable =sys-
  power/upower-0.9.23-r2.

*upower-pm-utils-0.9.23 (26 May 2014)

  26 May 2014; Samuli Suominen <ssuominen@gentoo.org>
  +upower-pm-utils-0.9.23.ebuild,
  +files/upower-pm-utils-0.9.23-clamp_percentage_for_overfull_batt.patch,
  +files/upower-pm-utils-0.9.23-create-dir-runtime.patch,
  +files/upower-pm-utils-0.9.23-fix-segfault.patch:
  Initial commit of upower 0.9 git branch for use with sys-power/pm-utils
  because upower master git branch removed support for it.
  Right now this is a copy of =sys-power/upower-0.9.23-r2 without
  USE="systemd" because sys-apps/systemd users will be moving to
  >=sys-power/upower-0.99.