@@ -1,13 +1,13 @@
 DEFINED_PHASES=configure install prepare
-DEPEND=>=dev-libs/dbus-glib-0.100 >=dev-libs/glib-2.22 sys-apps/dbus >=sys-auth/polkit-0.110 introspection? ( dev-libs/gobject-introspection ) kernel_linux? ( virtual/libusb:1 virtual/libgudev:= virtual/udev ios? ( >=app-pda/libimobiledevice-1:= >=app-pda/libplist-1:= ) ) !sys-power/upower dev-libs/libxslt app-text/docbook-xsl-stylesheets dev-util/intltool virtual/pkgconfig doc? ( dev-util/gtk-doc app-text/docbook-xml-dtd:4.1.2 ) virtual/pkgconfig
+DEPEND=>=dev-libs/dbus-glib-0.100 >=dev-libs/glib-2.22 sys-apps/dbus >=sys-auth/polkit-0.110 introspection? ( dev-libs/gobject-introspection ) kernel_linux? ( virtual/libusb:1 virtual/libgudev:= virtual/udev ios? ( >=app-pda/libimobiledevice-1:= >=app-pda/libplist-1:= ) ) !sys-power/upower dev-libs/libxslt app-text/docbook-xsl-stylesheets dev-util/intltool virtual/pkgconfig virtual/pkgconfig
 DESCRIPTION=The upstream upower 0.9 git branch for use with sys-power/pm-utils
 EAPI=5
 HOMEPAGE=http://upower.freedesktop.org/
-IUSE=doc +introspection ios kernel_FreeBSD kernel_linux
+IUSE=+introspection ios kernel_FreeBSD kernel_linux
 KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=>=dev-libs/dbus-glib-0.100 >=dev-libs/glib-2.22 sys-apps/dbus >=sys-auth/polkit-0.110 introspection? ( dev-libs/gobject-introspection ) kernel_linux? ( virtual/libusb:1 virtual/libgudev:= virtual/udev ios? ( >=app-pda/libimobiledevice-1:= >=app-pda/libplist-1:= ) ) !sys-power/upower kernel_linux? ( >=sys-power/pm-utils-1.4.1 )
 SLOT=0
 SRC_URI=http://upower.freedesktop.org/releases/upower-0.9.23.tar.xz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=a4e14f12ce909fc1fdb8093a146db619
+_md5_=eb7c3f76910556a6c92f7db1f55c9072
